--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -5,7 +5,7 @@ import type { Props } from '@astrojs/starlight/props';
 
 
 <a target="_blank" href="https://www.laughingzhu.cn" rel="me" class="sl-flex text-black dark:text-white no-underline hover:underline" > 
-  <span class="sl-flex">演示网站</span>
+  <span class="sl-flex">Demo</span>
 </a>
 
 <Default {...Astro.props}><slot /></Default>
